--- a/Pagina Web Direccion Empresas/css/agency.css
+++ b/Pagina Web Direccion Empresas/css/agency.css
@@ -693,3 +693,8 @@ ul.social-buttons li a {
 ul.social-buttons li a:active, ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   background-color: #fed136;
 }
+
+div.field-main-problem {
+  border: 1px solid black;
+  text-align: center;
+}
